test/files/neg/constructor-prefix-error.scala
class Outer {
  class Inner
}

object Test {
  val x = new Outer#Inner
}
